Book page mockup

--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -45,9 +45,10 @@
                                 <div class="login-form-group">
                                     <div class="input-group">
                                         <span class="input-group-addon" id="login-password-icon"><i class="fa fa-unlock-alt fa-fw" aria-hidden="true"></i></span>
-                                        <h:inputText value="#{memberSession.password}" class="login-input form-control" >
+                                        <h:inputSecret value="#{memberSession.password}" class="login-input form-control" >
                                             <f:passThroughAttribute name='placeholder' value="password"/>
-                                        </h:inputText>
+                                            <f:passThroughAttribute name='type' value="password"/>
+                                        </h:inputSecret>
                                     </div>
                                 </div>
 
