--- a/src/main/webapp/admin/add-new-staffmember.xhtml
+++ b/src/main/webapp/admin/add-new-staffmember.xhtml
@@ -2,6 +2,7 @@
                 xmlns:h="http://xmlns.jcp.org/jsf/html"
                 xmlns:f="http://xmlns.jcp.org/jsf/core"
                 xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+                xmlns:c="http://xmlns.jcp.org/jsp/jstl/core"
                 xmlns:v-on='vue.org'
                 xmlns:v-bind='vue.org'
                 template="../WEB-INF/templates/admin.template.xhtml">
@@ -28,6 +29,16 @@
                     <div class="form-group has-feedback">
                         <label for="firstname" class="col-sm-3 control-label">Name:</label>
                         <div class="col-sm-8">
+                            <c:if test="#{param['success'] == 'true'}">
+                                <div class="alert alert-success">
+                                    <strong>Successfully added new staff member.</strong>
+                                </div>
+                            </c:if>
+                            <c:if test="#{param['error'] == 'true'}">
+                                <div class="alert alert-danger">
+                                    <strong>Oh Snap!</strong> An error occured when trying to add that user.
+                                </div>
+                            </c:if>
                             <h:inputText value="#{newUserBean.firstname}" required="true" class="form-control">
                                 <f:passThroughAttribute name="type" value="text" />
                                 <f:passThroughAttribute name="v-model" value="firstname" />
