--- a/src/main/webapp/admin/add-stock.xhtml
+++ b/src/main/webapp/admin/add-stock.xhtml
@@ -1,10 +1,28 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE composition PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <ui:composition xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-                template="./../WEB-INF/templates/admin.template.xhtml">
+                template="./../WEB-INF/templates/admin.template.xhtml"
+                xmlns:h="http://xmlns.jcp.org/jsf/html"
+                xmlns:f="http://xmlns.jcp.org/jsf/core">
 
     <ui:define name="content">
-        content
+        <h:form>
+            <h:inputText 
+                id="search"
+                value="#{store.searchString}"
+                valueChangeListener="#{store.searchStringValueChanged}"
+            >
+                <f:ajax execute="search" render="output" event="blur"></f:ajax>
+            </h:inputText>
+            <div id="output" class="container-fluid">
+                <ui:repeat value="#{store.bookList}" var="book">
+                    <div class="card">
+                        <h4><h:outputText value="#{book.title}"/></h4>
+                    </div>
+                </ui:repeat>
+            </div>
+            
+        </h:form>
     </ui:define>
-
+    
 </ui:composition>
