--- a/src/main/webapp/shop/book.xhtml
+++ b/src/main/webapp/shop/book.xhtml
@@ -17,13 +17,13 @@
 
 
 		<h:form>
-		<ol class="breadcrumb">
-            <li><h:link outcome="/index">Home</h:link></li>
-            <li><h:link outcome="/shop">Shop</h:link></li>
-            <li><h:commandLink action="/shop/category">#{shop.genre}</h:commandLink></li>
-			<li class="active">#{shop.selectedBook.title}</li>
+			<ol class="breadcrumb">
+				<li><h:link outcome="/index">Home</h:link></li>
+				<li><h:link outcome="/shop">Shop</h:link></li>
+				<li><h:commandLink action="/shop/category">#{shop.genre}</h:commandLink></li>
+				<li class="active">#{shop.selectedBook.title}</li>
 
-        </ol>
+			</ol>
 		</h:form>
 
 		<br />
@@ -77,7 +77,14 @@
 							<h3 class="text-success">
 								In stock
 							</h3>
-							<a href="" class="btn btn-primary" role="button"><i class="fa fa-cart-plus" aria-hidden="true"></i> Add to cart</a>
+														
+
+							<h:form>
+								<h:commandLink>
+									<button class="btn btn-primary" role="button"><i class="fa fa-cart-plus" aria-hidden="true"></i> Add to cart</button>
+									<f:ajax listener="#{cart.add(shop.selectedBook.ISBN)}"/>
+								</h:commandLink>
+							</h:form>
 
                         </c:if>
 						<c:if test="#{shop.selectedBook.stockLevel == 0}">
@@ -115,4 +122,5 @@
 
 
     </ui:define>
+	
 </ui:composition>
