Working on cart and checkout

--- a/src/main/webapp/admin/add-new-staffmember.xhtml
+++ b/src/main/webapp/admin/add-new-staffmember.xhtml
@@ -5,7 +5,7 @@
                 xmlns:c="http://xmlns.jcp.org/jsp/jstl/core"
                 xmlns:v-on='vue.org'
                 xmlns:v-bind='vue.org'
-                template="../WEB-INF/templates/admin.template.xhtml">
+                template="/WEB-INF/templates/admin.template.xhtml">
 
     <ui:define name="top"></ui:define> 
     <ui:define name="content">
