Updated home page

--- a/src/main/webapp/shop/book.xhtml
+++ b/src/main/webapp/shop/book.xhtml
@@ -58,7 +58,7 @@
                     <dt>Category</dt>
                     <dd>#{shop.selectedBook.genre}</dd>
                     <dt>Publisher</dt>
-                    <dd>#{shop.selectedBook.genre}</dd>
+                    <dd>#{shop.selectedBook.publisher}</dd>
                     <dt>Publish Date</dt>
                     <dd>#{shop.selectedBook.pubYear}</dd>
                 </dl>
