--- a/src/main/webapp/checkout.xhtml
+++ b/src/main/webapp/checkout.xhtml
@@ -24,7 +24,7 @@
 
 
 					<div>
-						<div class="pull-right"><a href="#">edit</a></div>
+						<div class="pull-right"><h:link outcome="/user/details">edit</h:link></div>
 
 						<h4>Shipping to: </h4>
 					</div>
@@ -40,7 +40,7 @@
 
 					<br />
 					<div>
-						<div class="pull-right"><a href="#">edit</a></div>
+						<div class="pull-right"><h:link outcome="/user/details">edit</h:link></div>
 
 						<h4>Billing to: </h4>
 					</div>
