Major entity changes

--- a/src/main/webapp/cart.xhtml
+++ b/src/main/webapp/cart.xhtml
@@ -87,7 +87,7 @@
 
 
 						<td class="text-center">
-							<h:outputText value="#{item.book.retailPrice * item.quantity}">
+							<h:outputText value="#{item.totalPrice}">
 								<h4><f:convertNumber currencySymbol="$" type="currency" maxFractionDigits="2" /></h4>	
 							</h:outputText>
 						</td>
