--- a/src/main/webapp/sales/CreateAuction.xhtml
+++ b/src/main/webapp/sales/CreateAuction.xhtml
@@ -95,7 +95,7 @@
                             <div class="form-group has-feedback">                                
                                 <h:outputLabel value="#{bundle.CreateAuctionLabel_isbnIsbn}" for="isbnIsbn" class="col-sm-3 control-label"/>
                                 <div class="col-sm-8"> 
-                                    <h:selectOneMenu id="isbnIsbn" value="#{salesController.selected.isbnIsbn}" title="#{bundle.CreateAuctionTitle_isbnIsbn}" >
+                                    <h:selectOneMenu id="isbnIsbn" value="#{salesController.selected.isbn}" title="#{bundle.CreateAuctionTitle_isbnIsbn}" >
                                         <f:selectItems value="#{booksController.itemsAvailableSelectOne}"/>
                                     </h:selectOneMenu>
                                     <span class="form-control-feedback"><i v-bind:class='isbnFeedback' aria-hidden="true"></i></span>
